implemented jwt authentication

--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,5 +7,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "IdentityConnection": "Server=WINDOWS-GKHQ9SR; Database=UserDB; Trusted_COnnection = True; MultipleActiveResultSets= True"
+  },
+  "ApplicationSettings": {
+    "JWT_Secret": "1234567890123456",
+    "Client_URL": "http://localhost:4200"
   }
 }
